# PythonExtra

./: .gitignore  .gitmodules  Dockerfile  README.md  REPORT_SH_PORT.md
.devcontainer/: devcontainer.json
.github/workflows/: classpad.yml  docs.yml  sync-upstream-dev.yml
Fx-SDK-2.11.0/: CMakeLists.txt  README.md  README_zh.md  VSCode_zh.md  giteapc-config-noudisks2.make  giteapc.make
Fx-SDK-2.11.0/fxconv/: fxconv-main.py  fxconv.py
Fx-SDK-2.11.0/fxgxa/: dump.c  edit.c  endianness.h  file.c  fxgxa.h  g1a.h  g3a.h  icon.c  main.c  util.c
Fx-SDK-2.11.0/fxlink/: fxlink.h  main.c
Fx-SDK-2.11.0/fxlink/include/fxlink/tooling/: libpng.h  sdl2.h  udisks2.h
Fx-SDK-2.11.0/fxlink/include/fxlink/tui/: input.h  layout.h  render.h
Fx-SDK-2.11.0/fxlink/modes/: interactive.c  list.c  push.c  udisks2.c
Fx-SDK-2.11.0/fxlink/tooling/: libpng.c  sdl2.c  udisks2.c
Fx-SDK-2.11.0/fxlink/tui/: command-util.c  command-util.h  commands.c  input.c  layout.c  render.c  tui-interactive.c  tui.h
Fx-SDK-2.11.0/fxsdk/: fxsdk.sh  gdb-bridge.c
Fx-SDK-2.11.0/fxsdk/assets/: CMakeLists.txt  Makefile  project.cfg
Fx-SDK-2.11.0/fxsdk/assets/vscode/: c_cpp_properties.json
Fx-SDK-2.11.0/fxsdk/cmake/: CMakeDetermineFXCONVCompiler.cmake  CMakeFXCONVCompiler.cmake.in  CMakeFXCONVInformation.cmake  CMakeTestFXCONVCompiler.cmake  FX9860G.cmake  FX9860G_G3A.cmake  FXCG50.cmake  FXCP.cmake  FindSimpleLibrary.cmake  Fxconv.cmake  FxsdkUtils.cmake  GenerateG1A.cmake  GenerateG3A.cmake  GenerateHH2Bin.cmake  GitVersionNumber.cmake
Fx-SDK-2.11.0/fxsdk/scripts/: large_obj.py  patch_hh2_filename.py
Fx-SDK-2.11.0/gint-2.11.0/: .gitignore  TODO  giteapc.make
Fx-SDK-2.11.0/gint-2.11.0/cmake/: FindGint.cmake
Fx-SDK-2.11.0/libfxlink/: defs.c  devices.c  filter.c  logging.c  protocol.c
Fx-SDK-2.11.0/libfxlink/cmake/: FindLibFxlink.cmake
Fx-SDK-2.11.0/libfxlink/include/fxlink/: config.h.in  defs.h  devices.h  filter.h  logging.h  protocol.h
dev/: CMakeLists.txt  fx9860g.ld.c  fxcg50.ld.c
docs/: Makefile  README.md  conf.py  index.rst  license.rst  make.bat
docs/develop/: cmodules.rst  compiler.rst  extendingmicropython.rst  gettingstarted.rst  index.rst  library.rst  maps.rst  memorymgt.rst  natmod.rst  optimizations.rst  porting.rst  publiccapi.rst  qstr.rst  writingtests.rst
docs/differences/: index_template.txt  modules_preamble.txt  python_35.rst  python_38.rst  python_39.rst
docs/gint/fxcp/: quickref.rst
docs/mimxrt/: general.rst  quickref.rst
docs/mimxrt/tutorial/: intro.rst
docs/reference/: asm_thumb2_float.rst  asm_thumb2_hints_tips.rst  asm_thumb2_index.rst  asm_thumb2_mov.rst  constrained.rst  filesystem.rst  glossary.rst  index.rst  isr_rules.rst  manifest.rst  micropython2_migration.rst  mpremote.rst  mpyfiles.rst  packages.rst  pyboard.py.rst  repl.rst  reset_boot.rst  speed_python.rst
docs/renesas-ra/: quickref.rst
docs/renesas-ra/tutorial/: index.rst  intro.rst  program_in_flash.rst  reset.rst  troubleshooting.rst  using_peripheral.rst
docs/sh/: NWcompat_modules.md  NWcompat_modules_en.md  NWcompat_modules_fr.md  modcasioplot-en.md  modcasioplot-fr.md  modgint-en.md  modgint-fr.md
docs/static/: customstyle.css
docs/templates/: layout.html  topindex.html
docs/unix/: quickref.rst
examples/: usb_demo.py  usb_fxlink_demo.py  usb_machine_demo.py  usb_unsafe_demo.py
github/workflows/: build-docs.yml
ports/fx9860g3/: .gitignore  Makefile  fxconv-metadata.txt
ports/fxcg50/: .gitignore  Makefile  fxconv-metadata.txt  icon.xcf
ports/fxcp/: .gitignore  Makefile  fxconv-metadata.txt
ports/sh/: .gitignore  Makefile  console.c  console.h  debug.c  debug.h  fdfile.c  keymap.c  main.c  modcasioplot.c  modgint.c  modkandinsky.c  modtime.c  mpconfigport.h  mphalport.c  mphalport.h  objgintfont.c  objgintfont.h  objgintimage.c  objgintimage.h  objgintusb.c  objgintusb.h  objgintutils.c  objgintutils.h  pyexec.c  pyexec.h  resources.c  resources.h  shell.c  shell.h  stredit.c  stredit.h  widget_shell.c  widget_shell.h
ports/sh/examples/: FGFLAPPY.py  bgflappy_syserror.py  cg_NW_kand_test.py  cp_paint.py  ex_draw2.py  ex_poly.py  flappyFX2.py  flappyFX3.py  fx_gray.py  fx_image.py  gint_circle.py  gr_circle.py
ports/sh/examples/ISODSP/: data.py  data2.py  line.py  render.py  renderPE.py
ports/sh/examples/file/: missing.py
ports/sh/examples/font-support/: commandline fxconv.txt  fonttest1.py  fonttest2.py  fonttest4.py  nbfonttest2.py  nbfonttest3.py  nbfonttest4.py  numworks.py  nw_cpct.py  sh_cpct.py  shmup.py
ports/sh/examples/fonts/: convert.sh  fonttest1.py  fonttest2.py  fonttest3.py  nbfonttest1.py  numworks.py  nw_cpct.py  sh_cpct.py  shmup.py
ports/sh/examples/native_tests/: test_add.py  test_call.py  test_loop.py  test_viper.py
ports/sh/examples/numworks/: NW_pacman_original.py  NW_snake_origin.py  cg_NW_window.py
ports/sh/numworks/: colorsNW.h  ion.c  ionkeyNW.h  modion.c  modkandinsky.c  syscalls.S  syscalls.h  time.c
py/: asmsh.c  asmsh.h  builtinimport.c  compile.c  emit.h  emitglue.c  emitnative.c  emitnsh.c  gc.c  malloc.c  mpconfig.h  mpstate.h  obj.h  objlist.c  py.mk  qstr.c  runtime.c
scripts/: update-from-upstream.sh
shared/runtime/: gchelper.h  gchelper_generic.c  pyexec.c
